# plantbuddy

./: .gitignore  CMakeLists.txt
microui/: CMakeLists.txt
microui/include/: dummy.h
plantbuddy/: CMakeLists.txt  main.cpp
